--- a/src/App.css
+++ b/src/App.css
@@ -1,12 +1,12 @@
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-}
+/** {*/
+/*    margin: 0;*/
+/*    padding: 0;*/
+/*    box-sizing: border-box;*/
+/*}*/
 
 .page-container {
     width: 100%;
-    height: 100vh;
+    height: 100%;
     color: white;
     background: rgb(44,47,57);
     background: linear-gradient(205deg, rgba(44,47,57,1) 0%, rgba(0,0,0,1) 68%, rgba(80,83,92,1) 100%);
